# trading-app

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
api/: urls.py
frontend/: .env.example  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
nginx/: nginx.conf
notifications/: admin.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_rename_is_read_notification_read.py
products/: admin.py  forms.py  models.py  serializers.py  storage.py  urls.py  views.py
products/api/: serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_remove_productlisting_category_and_more.py  0003_delete_productlisting.py  0004_alter_product_category_alter_product_image.py
sales/: admin.py  models.py  serializers.py  storage.py  tasks.py  urls.py  views.py
sales/migrations/: 0001_initial.py  0002_rename_created_at_invoice_due_date_and_more.py  0003_remove_invoice_due_date_salesorder_total_price_and_more.py  0004_alter_invoice_pdf_file_alter_invoice_sales_order.py  0005_alter_invoice_pdf_file.py
templates/: base.html  main_page.html
templates/products/: product_create.html  product_delete.html  product_detail.html  product_edit.html  product_list.html  user_listings.html
templates/trading/: create_order.html  order_detail.html  order_list.html  payment_page.html  payment_success.html  transaction_list.html
trading/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
trading_app/: asgi.py  auth_middleware.py  celery.py  permissions.py  settings.py  urls.py  wsgi.py
users/: admin.py  context_processors.py  forms.py  models.py  serializers.py  storage.py  urls.py  views.py
webhooks/: urls.py  views.py
(+37 files in other folders)
