[project]
name = "trading_app"
version = "0.1.0"
description = ""
authors = [
    {name = "sl.ars",email = "sl.ars@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "stripe (>=11.5.0,<12.0.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-storages (>=1.14.5,<2.0.0)",
    "boto3 (>=1.37.1,<2.0.0)",
    "channels (>=4.2.0,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "sentry-sdk (>=2.22.0,<3.0.0)",
    "reportlab (>=4.3.1,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-filter (>=25.1,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
